--- a/index.html
+++ b/index.html
@@ -6,32 +6,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>the band</title>
-    <link rel="stylesheet" href="./assets/css/style.css">
-    <link rel="stylesheet" href="./assets/fonts/themify-icons-font/themify-icons/themify-icons.css">
+    <link rel="icon" href="../assets/img/band.png">
+    <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="stylesheet" href="../assets/css/responsive.css">
+    <link rel="stylesheet" href="../assets/fonts/themify-icons-font/themify-icons/themify-icons.css">
 </head>
 
 <body>
     <div id="main">
         <div id="header">
-            <ul id="nav">
-                <li><a href="">Home</a></li>
-                <li><a href="">Band</a></li>
-                <li><a href="">Tour</a></li>
-                <li><a href="">Contact</a></li>
+            <ul cellspadding="0" id="nav">
+                <li><a href="#">Home</a></li>
+                <li><a href="#band">Band</a></li>
+                <li><a href="#tour">Tour</a></li>
+                <li><a href="#contact">Contact</a></li>
                 <li>
-                    <a href="">
+                    <a href="#">
                         More
                         <i class="nav-arrow-down ti-angle-down"></i>
                     </a>
                     <ul class="subnav">
-                        <li><a href="">Merchandise</a></li>
-                        <li><a href="">Extras</a></li>
-                        <li><a href="">Media</a></li>
+                        <li><a href="#">Merchandise</a></li>
+                        <li><a href="#">Extras</a></li>
+                        <li><a href="#">Media</a></li>
                     </ul>
                 </li>
             </ul>
             <div class="search-btn">
                 <i class="search-icon ti-search"></i>
+            </div>
+            <div id="js-menu-icon" class="mobile-menu">
+                <i class="menu-icon ti-menu"></i>
             </div>
         </div>
         <div id="slider">
@@ -44,30 +49,29 @@
         <!-- noi dung chinh -->
         <div id="content">
             <!-- about section -->
-            <div class="content-section">
+            <div id="band" class="content-section">
                 <h2 class="section-heading">THE BAND</h2>
                 <p class="section-sub-heading">We love music</p>
                 <p class="about-text">We have created a fictional band website. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
                     ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
                     id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                <div class="member-list">
-                    <div class="member-item">
+                <div class="row member-list text-center">
+                    <div class="member-item col col-third">
                         <p class="name">Name</p>
-                        <img src="./assets/img/bandmember.jpg" alt="image member" class="member-img">
+                        <img src="../assets/img/bandmember.jpg" alt="image member" class="member-img">
                     </div>
-                    <div class="member-item">
+                    <div class="member-item col col-third">
                         <p class="name">Name</p>
-                        <img src="./assets/img/bandmember.jpg" alt="image member" class="member-img">
+                        <img src="../assets/img/bandmember.jpg" alt="image member" class="member-img">
                     </div>
-                    <div class="member-item">
+                    <div class="member-item col col-third">
                         <p class="name">Name</p>
-                        <img src="./assets/img/bandmember.jpg" alt="image member" class="member-img">
+                        <img src="../assets/img/bandmember.jpg" alt="image member" class="member-img">
                     </div>
-                    <div class="clear"></div>
                 </div>
             </div>
             <!-- tour section -->
-            <div class="tour-section">
+            <div id="tour" class="tour-section">
                 <div class="content-section">
                     <h2 class="section-heading text-white">TOUR DATES</h2>
                     <p class="section-sub-heading text-white">Remember to book your tickets!</p>
@@ -78,51 +82,178 @@
                         <li>October <span class="quatity">3</span></li>
                     </ul>
 
-                    <div class="ticket-list-item">
-                        <div class="ticket">
-                            <img src="./assets/img/newyork.jpg" alt="image ticket" class="ticket-img">
+                    <div class="row ticket-list-item">
+                        <div class="col col-third s-col-full mt-16">
+                            <img src="../assets/img/newyork.jpg" alt="image ticket" class="ticket-img">
                             <div class="ticket-content">
                                 <h3 class="ticket-heading">New York</h3>
                                 <p class="ticket-sub-heading">Fri 27 Nov 2016</p>
                                 <p class="ticket-about">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-                                <a href="#" class="buy-ticket-btn">Buy Tickets</a>
+                                <button href="#" class="btn js-buy-btn">Buy Tickets</button>
                             </div>
                         </div>
-                        <div class="ticket">
-                            <img src="./assets/img/paris.jpg" alt="image ticket" class="ticket-img">
+                        <div class="col col-third s-col-full mt-16">
+                            <img src="../assets/img/paris.jpg" alt="image ticket" class="ticket-img">
                             <div class="ticket-content">
                                 <h3 class="ticket-heading">Paris</h3>
                                 <p class="ticket-sub-heading">Sat 28 Nov 2016</p>
                                 <p class="ticket-about">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-                                <a href="#" class="buy-ticket-btn">Buy Tickets</a>
+                                <button href="#" class="btn js-buy-btn">Buy Tickets</button>
                             </div>
                         </div>
-                        <div class="ticket">
-                            <img src="./assets/img/sanfran.jpg" alt="image ticket" class="ticket-img">
+                        <div class="col col-third s-col-full mt-16">
+                            <img src="../assets/img/sanfran.jpg" alt="image ticket" class="ticket-img">
                             <div class="ticket-content">
                                 <h3 class="ticket-heading">San Francisco</h3>
                                 <p class="ticket-sub-heading">Sun 29 Nov 2016</p>
                                 <p class="ticket-about">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-                                <a href="#" class="buy-ticket-btn">Buy Tickets</a>
+                                <button href="#" class="btn js-buy-btn">Buy Tickets</button>
                             </div>
                         </div>
-                        <div class="clear"></div>
+
                     </div>
 
                 </div>
             </div>
 
             <!-- contact section -->
-            <div class="content-section">
+            <div id="contact" class="content-section">
                 <h2 class="section-heading">CONTACT</h2>
                 <p class="section-sub-heading">Fan? Drop a note!</p>
 
+                <div class="row contact-content">
+                    <div class="col col-half s-col-full contact-info">
+                        <p><i class="ti-location-pin"></i>Chicago, US</p>
+                        <p><i class="ti-mobile"></i>Phone: +00 151515</p>
+                        <p><i class="ti-email"></i>Email: mail@mail.com</p>
+                    </div>
+                    <div class="col col-half s-col-full contact-form">
+                        <form action="">
+                            <div class="row">
+                                <div class="col col-half s-col-full">
+                                    <input type="text" class="input" required placeholder="Name">
+                                </div>
+                                <div class="col col-half s-col-full s-mt-8">
+                                    <input type="email" class="input" required placeholder="Email">
+                                </div>
+
+                            </div>
+                            <div class="row mt-8">
+                                <div class="col col-full">
+                                    <input type="text" class="input" required placeholder="Message">
+                                </div>
+                            </div>
+                            <input type="submit" class="btn mt-16 s-full-width pull-right" value="SEND">
+                        </form>
+
+                    </div>
+                </div>
             </div>
+
+            <img class="map-section" src="../assets/img/map.jpg" alt="map image">
+
         </div>
         <div id="footer">
+            <div class="social-list">
+                <a class="social-icon" href=""><i class="ti-facebook"></i></a>
+                <a class="social-icon" href=""><i class="ti-instagram"></i></a>
+                <a class="social-icon" href=""><i class="ti-youtube"></i></a>
+                <a class="social-icon" href=""><i class="ti-pinterest"></i></a>
+                <a class="social-icon" href=""><i class="ti-twitter"></i></a>
+                <a class="social-icon" href=""><i class="ti-linkedin"></i></a>
+            </div>
+            <p class="mt-16 mb-16">Powered by <a href="#">Hoang Ca</a></p>
+        </div>
+    </div>
+    <div class="modal js-modal">
+        <div class="modal-container js-modal-container">
+            <div class="modal-close js-modal-close">
+                <i class="ti-close"></i>
+            </div>
+
+            <header class="model-header">
+                <i class="icon-bag ti-bag"></i> Tickets
+            </header>
+
+            <div class="modal-body">
+                <label for="" class="modal-label">
+                    <i class="ti-shopping-cart"></i>
+                    Tickets, $15 per person
+                </label>
+                <input type="text" class="modal-input" placeholder="How many?">
+
+                <label for="" class="modal-label">
+                    <i class="ti-user"></i>
+                    Send To
+                </label>
+                <input type="text" class="modal-input" placeholder="Enter email...">
+                <button id="pay-btn">Pay <i class="ti-check"></i></button>
+            </div>
+            <div class="modal-footer">
+                <p>Need <a href="#" class="help">help?</a></p>
+            </div>
 
         </div>
     </div>
+
+    <script>
+        // khai nao bien
+        const buyBtns = document.querySelectorAll('.js-buy-btn')
+        const modal = document.querySelector('.js-modal')
+        const modalClose = document.querySelector('.js-modal-close')
+        const modalContainer = document.querySelector('.js-modal-container')
+
+        // modal
+        function showBuytickets() {
+            modal.classList.add('open')
+        }
+
+        function hideBuytickets() {
+            modal.classList.remove('open')
+        }
+
+        for (const buyBtn of buyBtns) {
+            buyBtn.addEventListener('click', showBuytickets)
+        }
+
+        modalClose.addEventListener('click', hideBuytickets)
+
+        modal.addEventListener('click', hideBuytickets)
+
+        modalContainer.addEventListener('click', function(event) {
+            event.stopPropagation()
+        })
+
+        // mobile dong mo menu
+        var header = document.getElementById('header')
+        var mobileMenu = document.getElementById('js-menu-icon')
+        var headerHeight = header.clientHeight
+
+        mobileMenu.onclick = function() {
+            var isClose = header.clientHeight === headerHeight;
+
+            if (isClose) {
+                header.style.height = 'auto'
+            } else {
+                header.style.height = null
+            }
+        }
+
+        // dong item tren menu khi chon 1 item
+        var menuItems = document.querySelectorAll('#nav li a[href*="#"]')
+
+        for (var menuItem of menuItems) {
+            menuItem.onclick = function(event) {
+                var isParentMenu = this.nextElementSibling && this.nextElementSibling.classList.contains('subnav')
+                if (isParentMenu) {
+                    event.preventDefault()
+                } else {
+                    header.style.height = null
+                }
+
+            }
+        }
+    </script>
 
 </body>
 
