--- a/index.html
+++ b/index.html
@@ -58,15 +58,15 @@
                 <div class="row member-list text-center">
                     <div class="member-item col col-third">
                         <p class="name">Name</p>
-                        <img src="../assets/img/bandmember.jpg" alt="image member" class="member-img">
+                        <img src="./assets/img/bandmember.jpg" alt="image member" class="member-img">
                     </div>
                     <div class="member-item col col-third">
                         <p class="name">Name</p>
-                        <img src="../assets/img/bandmember.jpg" alt="image member" class="member-img">
+                        <img src="./assets/img/bandmember.jpg" alt="image member" class="member-img">
                     </div>
                     <div class="member-item col col-third">
                         <p class="name">Name</p>
-                        <img src="../assets/img/bandmember.jpg" alt="image member" class="member-img">
+                        <img src="./assets/img/bandmember.jpg" alt="image member" class="member-img">
                     </div>
                 </div>
             </div>
@@ -84,7 +84,7 @@
 
                     <div class="row ticket-list-item">
                         <div class="col col-third s-col-full mt-16">
-                            <img src="../assets/img/newyork.jpg" alt="image ticket" class="ticket-img">
+                            <img src="./assets/img/newyork.jpg" alt="image ticket" class="ticket-img">
                             <div class="ticket-content">
                                 <h3 class="ticket-heading">New York</h3>
                                 <p class="ticket-sub-heading">Fri 27 Nov 2016</p>
@@ -93,7 +93,7 @@
                             </div>
                         </div>
                         <div class="col col-third s-col-full mt-16">
-                            <img src="../assets/img/paris.jpg" alt="image ticket" class="ticket-img">
+                            <img src="./assets/img/paris.jpg" alt="image ticket" class="ticket-img">
                             <div class="ticket-content">
                                 <h3 class="ticket-heading">Paris</h3>
                                 <p class="ticket-sub-heading">Sat 28 Nov 2016</p>
@@ -102,7 +102,7 @@
                             </div>
                         </div>
                         <div class="col col-third s-col-full mt-16">
-                            <img src="../assets/img/sanfran.jpg" alt="image ticket" class="ticket-img">
+                            <img src="./assets/img/sanfran.jpg" alt="image ticket" class="ticket-img">
                             <div class="ticket-content">
                                 <h3 class="ticket-heading">San Francisco</h3>
                                 <p class="ticket-sub-heading">Sun 29 Nov 2016</p>
@@ -150,7 +150,7 @@
                 </div>
             </div>
 
-            <img class="map-section" src="../assets/img/map.jpg" alt="map image">
+            <img class="map-section" src="./assets/img/map.jpg" alt="map image">
 
         </div>
         <div id="footer">
